<resources>
    <string name="app_name">BBITGA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="txtusername">username</string>
    <string name="txtpassword">password</string>
    <string name="txtfirstname">First Name</string>
    <string name="txtlastname">Last Name</string>
    <string name="txtemail">Email</string>
    <string name="txtphone">Phone</string>
    <string name="txtlogin">login</string>
    <string name="txtnewacc">Do you have an account?        Sign up</string>
    <string name="txtcreateaccount">Create Account</string>
</resources>
