<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="65dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtfirstname"
        android:hint="First Name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtlastname"
        android:hint="Last Name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtemail"
        android:hint="Email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtusername"
        android:hint="Username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtpassword"
        android:hint="Password"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtphone"
        android:hint="@string/txtphone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtcreateaccount"
        android:background="@color/create"/>
        />
    </LinearLayout>